Fix spacing

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -125,7 +125,6 @@ max-width: 522px
   background-size: contain;
   background-position: right;
   background-repeat: no-repeat;
-  height: calc(100vh - 72px);
   display: flex;
   align-items: center;
   justify-content: space-between;
